--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
   <div class="overlay" id="overlay"></div>
   <div class="mobile-nav" id="mobileNav">
     <div class="mobile-nav-header">
-      <a href="#" class="logo">YourName</a>
+      <a href="#" class="logo">Bibekananda Murmu</a>
       <button class="close-btn" id="closeBtn">
         <i class="fas fa-times"></i>
       </button>
@@ -919,7 +919,7 @@
         </div>
         <div class="btn-group">
           <a href="#contact" class="btn"><i class="fas fa-paper-plane"></i> Contact Me</a>
-          <a href="assets/pdf/your-resume.pdf" download class="btn btn-outline"><i class="fas fa-download"></i> Download CV</a>
+          <a href="assets/pdf/Resume.pdf" download class="btn btn-outline"><i class="fas fa-download"></i> Download CV</a>
         </div>
       </div>
       <div class="profile-container">
@@ -1090,7 +1090,7 @@
           </div>
           <div class="contact-text">
             <h3>Email</h3>
-            <a href="mailto:your.email@example.com">your.email@example.com</a>
+            <a href="mailto:your.email@example.com">murmubibekananda02@gmail.com</a>
           </div>
         </div>
         
@@ -1100,7 +1100,7 @@
           </div>
           <div class="contact-text">
             <h3>Phone</h3>
-            <p>+91 XXXXX XXXXX</p>
+            <p>+91 96924 35714</p>
           </div>
         </div>
         
